﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-07-31 Michal Čihař  <michal@cihar.com>
    * lang/czech: Updated.

2006-07-31 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * css\phpmyadmin.css.php, libraries\Config.class.php, main.php,
      themes\*: make font size user configurable

2006-07-30 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug #1526000, copy table on MySQL 5.0.23+,
      thanks to Rapsys Phoenix - rapsys

2006-07-28 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php: Protect against php code input from user (bug
      #1530370).

2006-07-27 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_pages.php: automatic layout for InnoDB tables
    * tbl_properties_operations.php: problem switching from InnoDB to MyISAM
    * tbl_printview.php, libraries/mult_submits.inc.php,
      libraries/db_table_exists.lib.php:
      bug #1521910, with selected ... print view

2006-07-26 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: bug #1526557, display error when admin
      lacks some privileges and tries to do a privilege change
    * libraries/common.lib.php: bug #1523784, blank page after Edit
      in IE6 via IIS

2006-07-22 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_import.lib.php: the Character set of the file
      could appear twice
    * tbl_properties_operations.php: handling of AUTO_INCREMENT when moving a
      table

2006-07-20 Michal Čihař  <michal@cihar.com>
    * libraries/compat/var_export.php: Dropped due to license problems.
    * scripts/setup.php: Implement own var_export.

2006-07-19 Marc Delisle  <lem9@users.sourceforge.net>
    * browse_foreigners.php: bug #1525393, no page selector in foreign key
      browse page

2006-07-19 Michal Čihař  <michal@cihar.com>
    * libraries/compat/var_export.php: Update to fixed version.

2006-07-19 Sebastian Mendel <cybot_tm@users.sourceforge.net>